--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/netinfo": "^6.0.0",
     "@react-native-community/push-notification-ios": "^1.10.1",
     "@react-native-firebase/app": "^14.2.4",
+    "@react-native-firebase/auth": "^14.2.4",
     "@react-native-firebase/database": "^14.2.4",
     "@react-native-firebase/messaging": "^14.2.4",
     "@react-navigation/bottom-tabs": "^5.11.15",
