--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-firebase/app": "^14.2.4",
     "@react-native-firebase/auth": "^14.2.4",
     "@react-native-firebase/database": "^14.2.4",
+    "@react-native-firebase/firestore": "^14.2.4",
     "@react-native-firebase/messaging": "^14.2.4",
     "@react-navigation/bottom-tabs": "^5.11.15",
     "@react-navigation/drawer": "^5.12.9",
@@ -36,7 +37,7 @@
     "react-native-dropdown-picker": "^5.3.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-get-random-values": "^1.8.0",
-    "react-native-gifted-chat": "^1.0.4",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-image-crop-picker": "^0.37.2",
     "react-native-keyboard-avoiding-scroll-view": "^1.0.1",
     "react-native-options-menu": "^2.0.2",
